[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene_script/main/Main.gd" type="Script" id=1]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43.8084, 43.8494 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.113725, 0.113725, 0.113725, 0.921569 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.698039, 0.698039, 0.698039, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayAgain:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.101961 ) ]
}

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="Environment" id=7]
background_mode = 4
glow_enabled = true
glow_intensity = 2.0
glow_strength = 0.8
glow_blend_mode = 1
glow_bicubic_upscale = true

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Indicator" type="Node2D" parent="."]

[node name="PanelBG" type="ColorRect" parent="Indicator"]
margin_right = 1025.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.388235, 0.45098, 0.47451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_1" type="ColorRect" parent="Indicator"]
material = SubResource( 1 )
margin_left = 100.0
margin_top = 100.0
margin_right = 250.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_2" type="ColorRect" parent="Indicator"]
material = SubResource( 2 )
margin_left = 750.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Control" parent="."]
margin_left = 340.0
margin_top = 120.0
margin_right = 380.0
margin_bottom = 160.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Board"]
margin_left = 101.0
margin_top = 22.0
margin_right = 111.0
margin_bottom = 322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Board"]
margin_left = 201.0
margin_top = 22.0
margin_right = 211.0
margin_bottom = 322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Board"]
margin_left = 6.0
margin_top = 117.0
margin_right = 306.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Board"]
margin_left = 5.73413
margin_top = 212.0
margin_right = 305.734
margin_bottom = 222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area" type="Node2D" parent="Board"]
position = Vector2( 56.1916, 73.8494 )

[node name="Area_1" type="Area2D" parent="Board/Area"]
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_1"]
shape = SubResource( 3 )

[node name="Area_2" type="Area2D" parent="Board/Area"]
position = Vector2( 98.8084, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_2"]
shape = SubResource( 3 )

[node name="Area_3" type="Area2D" parent="Board/Area"]
position = Vector2( 198.808, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_3"]
shape = SubResource( 3 )

[node name="Area_4" type="Area2D" parent="Board/Area"]
position = Vector2( 0, 96.1506 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_4"]
shape = SubResource( 3 )

[node name="Area_5" type="Area2D" parent="Board/Area"]
position = Vector2( 98.8084, 96.1506 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_5"]
shape = SubResource( 3 )

[node name="Area_6" type="Area2D" parent="Board/Area"]
position = Vector2( 198.808, 96.1506 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_6"]
shape = SubResource( 3 )

[node name="Area_7" type="Area2D" parent="Board/Area"]
position = Vector2( 0, 191.151 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_7"]
shape = SubResource( 3 )

[node name="Area_8" type="Area2D" parent="Board/Area"]
position = Vector2( 98.8084, 191.151 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_8"]
shape = SubResource( 3 )

[node name="Area_9" type="Area2D" parent="Board/Area"]
position = Vector2( 198.808, 191.151 )
__meta__ = {
"_edit_group_": true
}

[node name="col" type="CollisionShape2D" parent="Board/Area/Area_9"]
shape = SubResource( 3 )

[node name="GameOverPopUp" type="Panel" parent="."]
margin_left = 368.0
margin_top = 456.0
margin_right = 630.0
margin_bottom = 552.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOverPopUp"]
anims/text_blink = SubResource( 5 )

[node name="GameOver" type="Label" parent="GameOverPopUp"]
margin_left = 38.0
margin_top = 16.0
margin_right = 114.0
margin_bottom = 30.0
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameWon" type="Label" parent="GameOverPopUp"]
margin_left = 38.0
margin_top = 40.0
margin_right = 70.0
margin_bottom = 54.0
text = "Draw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Label" parent="GameOverPopUp"]
margin_left = 38.0
margin_top = 64.0
margin_right = 230.0
margin_bottom = 78.0
text = "Press 'spacebar' to Play Again "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShapeInstances" type="Node2D" parent="."]
position = Vector2( 0, -1 )

[node name="WinIndicator" type="Node2D" parent="."]
visible = false
position = Vector2( 495, 290 )

[node name="HightLight" type="ColorRect" parent="WinIndicator"]
material = SubResource( 6 )
margin_left = -145.0
margin_top = -10.0
margin_right = 145.0
margin_bottom = 8.0
color = Color( 0.713726, 0.0823529, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[connection signal="mouse_entered" from="Board/Area/Area_1" to="." method="_on_Area_1_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_2" to="." method="_on_Area_2_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_3" to="." method="_on_Area_3_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_4" to="." method="_on_Area_4_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_5" to="." method="_on_Area_5_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_6" to="." method="_on_Area_6_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_7" to="." method="_on_Area_7_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_8" to="." method="_on_Area_8_mouse_entered"]
[connection signal="mouse_entered" from="Board/Area/Area_9" to="." method="_on_Area_9_mouse_entered"]
